# usb-devices

./: .eslintrc.js  .travis.yml  README.md  jest.config.js  package.json
examples/: index.js
lib/: .prettierrc  index.d.ts  index.js
native/: Cargo.toml  README.md  index.d.ts
native/src/: lib.rs  utils.rs
native/src/device/: device_descriptor.rs  mod.rs
tests/: index.test.js
tests/__mocks__/: index.js
